--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "megamillions-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.0.3",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "react-scripts start",
